# ClosetCoach

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
closetcoach_crawler/: crawler.py  download_images.py  export_db.sh  import_db.sh  scrapy.cfg
closetcoach_crawler/myntra_spider/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
closetcoach_crawler/myntra_spider/spiders/: product_details_scraper.py  product_page_urls.py
data/spiders/: generate_product_details_scraper_spiders.py
data/spiders/myntra_spider/: scrapy.cfg
data/spiders/myntra_spider/myntra_spider/: items.py  middlewares.py  pipelines.py  run_product_page_url_scraper_spider.sh  settings.py  utils.py
data/spiders/myntra_spider/myntra_spider/spiders/: product_details_scraper.py  product_page_urls.py
docs/: index.md  index.rst  road_map.md  setup.md  setup.rst
docs/tutorials/: intro_to_scrapy.md  intro_to_scrapy.rst  scraping_myntra_product_data.md  scraping_myntra_product_data.rst  scraping_myntra_product_data_part1.md  scraping_myntra_product_data_part2.md  scraping_product_page_urls_using_scrapy.md  scraping_product_page_urls_using_scrapy.rst
site/: 404.html  index.html  search.html
site/search/: search_index.json
site/setup/: index.html
site/tutorials/intro_to_scrapy/: index.html
site/tutorials/scraping_myntra_product_data_part1/: index.html
site/tutorials/scraping_myntra_product_data_part2/: index.html
tests/closetcoach_crawler/myntra_spider/spiders/: test_product_details_scraper.py  test_product_page_urls.py
tests/test_data/: constants.py
tests/test_data/page_url_html/: men-jackets.html  men-sunglasses.html  men_tshirts_page_1.html
tests/test_data/product_details_html/: product_12222036.html  product_19524874.html  product_20276770.html  product_7546900.html
(+2 files in other folders)
