[tool.poetry]
name = "closetcoach"
version = "0.1.0"
description = ""
authors = ["SATISH J <satish27may@gmail.com>"]
readme = "README.md"
packages = [
            { include = "closetcoach_crawler" }
]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.3"
scrapy = "^2.8.0"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
